--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "keywords": [],
   "license": "MIT",
   "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "types": "lib/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/bouzuya/simple-gist-client.git"
