--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "url": "https://github.com/bouzuya/simple-gist-client.git"
   },
   "scripts": {
-    "build": "typings i && tsc && ([ -d lib ] || mkdir lib) && cp -R .tmp/src/ lib/",
-    "clean": "rm -rf .tmp",
-    "prepublish": "npm run clean && npm run build",
+    "build": "npm-run-all -s \"build:types\" \"build:lib\"",
+    "build:lib": "cpx \".tmp/src/*.{js,ts}\" lib",
+    "build:types": "typings i && tsc && ([ -d lib ] || mkdir lib)",
+    "clean": "rimraf .tmp lib",
+    "prepublish": "npm-run-all -s clean build",
     "test": "ava"
   },
   "types": "lib/index.d.ts"
