--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
     "node-fetch": "1.5.2"
   },
   "devDependencies": {
+    "@types/node": "^8.0.19",
+    "@types/node-fetch": "^1.6.7",
+    "@types/proxyquire": "^1.3.27",
+    "@types/sinon": "^2.3.3",
     "ava": "0.14.0",
     "cpx": "^1.5.0",
     "npm-run-all": "^4.0.2",
     "proxyquire": "1.7.9",
     "rimraf": "^2.6.1",
     "sinon": "1.17.4",
-    "typescript": "1.8.10",
-    "typings": "0.8.1"
+    "typescript": "^2.4.2"
   },
   "files": [
     "lib/index.js",
@@ -44,9 +47,9 @@
     "url": "https://github.com/bouzuya/simple-gist-client.git"
   },
   "scripts": {
-    "build": "npm-run-all -s \"build:types\" \"build:lib\"",
+    "build": "npm-run-all -s \"build:ts\" \"build:lib\"",
     "build:lib": "cpx \".tmp/src/*.{js,ts}\" lib",
-    "build:types": "typings i && tsc && ([ -d lib ] || mkdir lib)",
+    "build:ts": "tsc",
     "clean": "rimraf .tmp lib",
     "prepublish": "npm-run-all -s clean build",
     "test": "ava"
