--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "https://github.com/bouzuya/simple-gist-client/issues"
   },
   "dependencies": {
-    "node-fetch": "1.5.2"
+    "node-fetch": "^1.7.1"
   },
   "devDependencies": {
     "@types/node": "^8.0.19",
